--- a/cicd/PipelineRun/build-push-v1.0.yaml
+++ b/cicd/PipelineRun/build-push-v1.0.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
-  name: build-push
+  name: build-push-v1.0
 spec:
   pipelineRef:
     name: build-push
@@ -11,7 +11,11 @@ spec:
   - name: git-url
     value: https://github.com/giofontana/rhel-ubi-apache-sample.git
   - name: IMAGE
-    value: quay-registry-quay-openshift-operators.apps.cluster-dvcqm.dvcqm.sandbox1759.opentlc.com/demo/sample-php
+    value: quay-registry-quay-openshift-operators.apps.cluster-dvcqm.dvcqm.sandbox1759.opentlc.com/demo/sample-php:v1.0
+  - name: acs_central_endpoint
+    value: acs-secret
+  - name: acs_api_token
+    value: acs-secret    
   workspaces:
   - name: shared-workspace
     volumeClaimTemplate:
