--- a/cicd/kustomization.yaml
+++ b/cicd/kustomization.yaml
@@ -1,6 +1,7 @@
 resources:
 - namespace.yaml
 - Tasks/deploy.yaml
+- Tasks/acs-deployment-check.yaml
 - Pipeline/build-push.yaml
 - PipelineRun/pvc.yaml
 - PipelineRun/build-push.yaml
