--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,8 +16,15 @@ spec:
     spec:
       containers:
         - image: quay.io/gfontana/sample-php:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: sample-php
           ports:
             - containerPort: 8080
               protocol: TCP
+          resources:
+            requests:
+              memory: "100Mi"
+              cpu: "100m"
+            limits:
+              memory: "500Mi"
+              cpu: "500m"
