--- a/ci/kustomization.yaml
+++ b/ci/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
 - namespace.yaml
 - Tasks/acs-deployment-check.yaml
 - Pipeline/build-push.yaml
-- PipelineRun/pvc.yaml
-- PipelineRun/build-push-latest.yaml
+#- PipelineRun/pvc.yaml
+#- PipelineRun/build-push-latest.yaml
 
 namespace: sample-php-cicd
