--- a/ci/PipelineRun/pvc.yaml
+++ b/ci/PipelineRun/pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: source-pvc
+  namespace: sample-php-cicd  
 spec:
   accessModes:
     - ReadWriteOnce
