changing the name of the vm

--- a/vm/vm-sample.yaml
+++ b/vm/vm-sample.yaml
@@ -14,7 +14,7 @@ metadata:
     vm.kubevirt.io/template.namespace: openshift
     vm.kubevirt.io/template.revision: '1'
     workload.template.kubevirt.io/server: 'true'
-  name: details-vm
+  name: pipeline-vm
 spec:
   dataVolumeTemplates:
     - apiVersion: cdi.kubevirt.io/v1beta1
